# zero2produ

./: .env  Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml  local.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
